fix: 영단어의 line-break 문제와 codeblock 내 overflow 시 글자 크기가 커지는 문제를 해결한다

--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -10,6 +10,10 @@
 body {
   font-size: 1rem;
   color: #333333;
+  word-break: break-all;
+  -ms-text-size-adjust: 100%; 
+  -moz-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
 }
 
 /* ref: https://www.modularscale.com/?1&em&1.25 */
@@ -221,7 +225,7 @@ p, li {
 }
 
 @media screen and (max-width: 800px) {
-  body {
+  html {
     font-size: 0.85rem;
   }
 
